@@ -20,10 +20,10 @@
  */
 require_once('auth.php');
 require_once('config.php');
-$link = @mysqli_connect(DB_HOST, DB_USER, 
+$link = mysqli_connect(DB_HOST, DB_USER, 
         DB_PASSWORD, DB_DATABASE);
 if (mysqli_connect_error()) {
-  $logMessage = 'MySQL Error 1: ' . mysqli_connect_error();
+  $logMessage = 'createGame.php: Connect Failed: ' . mysqli_connect_error();
   error_log($logMessage);
   echo "fail";
   exit;
@@ -51,7 +51,7 @@ for ($i = 0; $i < $count; $i++) {
 $qry1 = "START TRANSACTION";
 $result1 = mysqli_query($link, $qry1);
 if (!$result1) {
-  $logMessage = 'MySQL Error 2: ' . mysqli_error($link);
+  $logMessage = 'createGame.php: START TRANSACTION failed ' . mysqli_error($link);
   error_log($logMessage);
   echo "fail";
   exit;
@@ -67,7 +67,7 @@ if ($result9) {
     exit;
   }
 } else {
-  $logMessage = 'MySQL Error 9: ' . mysqli_error($link);
+  $logMessage = 'createGame.php: Check for duplicate game name failed';
   error_log($logMessage);
   echo "fail"; 
   mysqli_query($link, $qry0); // ROLLBACK
@@ -84,7 +84,7 @@ if ($result2) {
     exit;
   }
 } else {
-  $logMessage = 'MySQL Error 3: ' . mysqli_error($link);
+  $logMessage = 'createGame.php: Check for valid boxid ID failed';
   error_log($logMessage);
   echo "fail"; 
   mysqli_query($link, $qry0); // ROLLBACK
@@ -106,7 +106,7 @@ for ($i = 0; $i < $count; $i++) {
       $playerid[$i] = $temp[0];
     }
   } else {
-    $logMessage = 'MySQL Error 4: ' . mysqli_error($link);
+    $logMessage = 'createGame.php: Validate Player Names failed';
     error_log($logMessage);
     echo "fail"; 
     mysqli_query($link, $qry0); // ROLLBACK
@@ -126,7 +126,7 @@ $qry4 = "INSERT INTO game SET gname='$name', box_id='$boxid',
           json_text='$jtxt'";  
 $result4 = mysqli_query($link,$qry4);
 if (!$result4) {   // Did the query fail
-  $logMessage = 'MySQL Error 5: ' . mysqli_error($link);
+  $logMessage = 'createGame.php: INSERT query failed';
   error_log($logMessage);
   echo "fail"; 
   mysqli_query($link, $qry0); // ROLLBACK
@@ -138,7 +138,7 @@ $gameid = mysqli_insert_id($link);
 $qry5 = "SELECT activity_date FROM game WHERE game_id = '$gameid'";
 $result5 = mysqli_query($link,$qry5);
 if (!$result5 || (mysqli_num_rows($result5) != 1)) {
-  $logMessage = 'MySQL Error 6: ' . mysqli_error($link);
+  $logMessage = 'createGame.php: SELECT activity_date query failed';
   error_log($logMessage);
   echo "fail"; 
   mysqli_query($link, $qry0); // ROLLBACK
@@ -148,7 +148,7 @@ $ad = mysqli_fetch_array($result5);
 $qry6 = "UPDATE game SET start_date = '$ad[0]' WHERE game_id = '$gameid'";
 $result6 = mysqli_query($link,$qry6);
 if (!$result6) {   // Did the query fail
-  $logMessage = 'MySQL Error 7: ' . mysqli_error($link);
+  $logMessage = 'createGame.php: UPDATE game query failed';
   error_log($logMessage);
   echo "fail"; 
   mysqli_query($link, $qry0); // ROLLBACK
@@ -161,7 +161,7 @@ for ($i = 0; $i < $count; $i++) {
       player_id='$playerid[$i]'";
   $result7 = mysqli_query($link,$qry7);
   if (!$result7) {   // Did the query fail
-    $logMessage = 'MySQL Error 8: ' . mysqli_error($link);
+    $logMessage = 'createGame.php: create game_player query failed';
     error_log($logMessage);
     echo "fail"; 
     mysqli_query($link, $qry0); // ROLLBACK
