@@ -22,7 +22,7 @@ require_once('sendEmail.php');
 
 $link = mysqli_connect(DB_HOST, DB_USER, DB_PASSWORD, DB_DATABASE);
 if (!$link) {
-  error_log('Failed to connect to server: ' . mysqli_connect_error());
+  error_log('emailPlayerAdd.php: Failed to connect to server: ' . mysqli_connect_error());
   echo 'fail';
   exit; 
 }
@@ -30,7 +30,7 @@ if (!$link) {
 //Function to sanitize values received from the form. 
 //Prevents SQL injection
 function clean($conn, $str) {
-  $str = @trim($str);
+  $str = trim($str);
   return mysqli_real_escape_string($conn, $str);
 }
 
@@ -45,7 +45,7 @@ $result1 = mysqli_query($link, $qry1);
 if ($result1) {
   if (mysqli_num_rows($result1) === 0) { // No player!
     echo 'fail';
-    error_log("Look up player: Player login not found!");
+    error_log("emailPlayerAdd.php: Look up player: Player login not found!");
     exit;
   } else { // Found login in database!
     $playerrow = mysqli_fetch_assoc($result1);
@@ -59,7 +59,7 @@ if ($result1) {
   }
 } else {
   echo 'fail';
-  error_log("Look up player: Query failed");
+  error_log("emailPlayerAdd.php: Look up player: Query failed");
   exit;
 }
 ?>
